Agregar frase con la zona horaria (#62)
* Agregar frase con la zona horaria

* Cambiando estilo del comentario de zona horaria

--- a/gen_programa/base.html
+++ b/gen_programa/base.html
@@ -656,6 +656,7 @@
                     </ul>
                 </div>
 
+                <h3 style="font-size: 1.5rem; margin-bottom: 2rem;">El horario de las charlas está en la <a href="https://time.is/CEST">zona horaria CEST</a></h3>
                 <div class="tabs-content">
                   <!--Tab Viernes -->
                   <div class="tab active-tab" id="tab1">
