--- a/index.html
+++ b/index.html
@@ -672,7 +672,7 @@
                         <figure class="thumbs-box"><img src="images/pyladies_madrid.jpg" alt="..."></figure>
                         <div class="content-box">
                           <div class="date"><span class="icon far fa-clock"></span>16:00 - 20:00</div>
-                          <h4><a href="#">Taller Django</a></h4>
+                          <h4><a href="/#tallerpyladies">Taller Django</a></h4>
                             <!--
                             <div class="collapse multi-collapse" id="collapseDescriptionViernes">...</div>
                             -->
