Add description for Cometa sponsor

--- a/index.html
+++ b/index.html
@@ -3715,7 +3715,14 @@
             <div class="bronze-sponsors">
               <h4>Bronce</h4>
               <ul>
-                  <li class="slide-item"><figure class="image"><a href="https://www.desarrollocometa.com/"><img src="images/sponsors/logo-cometa-transparente.png" alt="cometa"></a></figure></li>
+                  <li class="slide-item">
+                    <figure class="image">
+                      <a href="https://www.desarrollocometa.com/">
+                        <img src="images/sponsors/logo-cometa-transparente.png" alt="cometa">
+                      </a>
+                    </figure>
+                    <p>Especialistas en desarrollo de software, en hacer realidad tu proyecto, como tú lo necesites.</p>
+                  </li>
               </ul>
             </div>
         </div>
