--- a/gen_programa/base.html
+++ b/gen_programa/base.html
@@ -590,13 +590,21 @@
       <data id="mj-w-res-data" data-token="2a609127d3c34a252b160b843131368a" class="mj-w-data" data-apikey="5JG8" data-w-id="IT4" data-lang="es_ES" data-base="https://app.mailjet.com" data-width="640" data-height="437" data-statics="statics"></data>
 
       <section id="newsletter" class="call-to-action" style="background-image: url(images/background/15.jpg);">
-          <div class="auto-container">
+        <div class="auto-container">
+            <div class="content-box">
+               <h3>¡Apúntate!</h3>
+                <span class="title">Talleres</span>
+                <div class="text">¿Quieres asistir a alguno de los talleres? En ese caso, por favor, rellena este
+                  <a href="https://forms.gle/p8r2bWZHfF8V7pHB9">formulario</a> para que podamos contar contigo! :)
+                </div>
+
               <div class="content-box">
                   <span class="title">Newsletter</span>
-                  <h3>¡Apúntate!</h3>
                   <div class="text">Si no quieres perderte ninguna noticia importante de ésta o futuras ediciones de la PyConES, suscríbete a nuestra lista de correo y te mantendremos al día.</div>
                   <div class="btn-box"><a href="#" data-token="2a609127d3c34a252b160b843131368a" class="theme-btn btn-style-one" onclick="mjOpenPopin(event, this)">Inscribirme<span class="flaticon-arrow"></span></a></div>
               </div>
+            </div>
+
           </div>
       </section>
       <!-- End Call To Action -->
