Add footer link to GitHub project repo

--- a/index.html
+++ b/index.html
@@ -3927,7 +3927,7 @@
                 </ul>
             </div>
             <div class="copyright-text">
-              © <a href="#">Python España & PyConES 2021 Org </a>
+              © <a href="https://github.com/python-spain/pycones2021-web">Python España & PyConES 2021 Org </a>
             </div>
           </div>
         </div>
