Change big subscription button for href link

--- a/gen_programa/base.html
+++ b/gen_programa/base.html
@@ -612,9 +612,8 @@
               <div class="content-box">
                   <span class="title">Newsletter</span>
                   <div class="text">
-                    Si no quieres perderte ninguna noticia importante de ésta o futuras ediciones de la PyConES, suscríbete a nuestra lista de correo y te mantendremos al día.
+                    Si no quieres perderte ninguna noticia importante de ésta o futuras ediciones de la PyConES, <a href="#" data-token="2a609127d3c34a252b160b843131368a" onclick="mjOpenPopin(event, this)">suscríbete a nuestra lista de correo</a> y te mantendremos al día.
                   </div>
-                  <div class="btn-box"><a href="#" data-token="2a609127d3c34a252b160b843131368a" class="theme-btn btn-style-one" onclick="mjOpenPopin(event, this)">Inscribirme<span class="flaticon-arrow"></span></a></div>
               </div>
             </div>
 
