--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         <a href="#rev_slider_one_wrapper">Inicio</a>
                       </li>
                       <li>
-                        <a href="#newsletter">Apúntate</a>
+                        <a href="#signup">Apúntate</a>
                       </li>
                       <li>
                         <a href="#about">Acerca de</a>
@@ -589,19 +589,31 @@
       <!-- Call To Action -->
       <data id="mj-w-res-data" data-token="2a609127d3c34a252b160b843131368a" class="mj-w-data" data-apikey="5JG8" data-w-id="IT4" data-lang="es_ES" data-base="https://app.mailjet.com" data-width="640" data-height="437" data-statics="statics"></data>
 
-      <section id="newsletter" class="call-to-action" style="background-image: url(images/background/15.jpg);">
+      <section id="signup" class="call-to-action" style="background-image: url(images/background/15.jpg);">
         <div class="auto-container">
             <div class="content-box">
-               <h3>¡Apúntate!</h3>
+              <h3>¡Apúntate!</h3>
+
+              <div class="content-box">
+                <span class="title">Charlas</span>
+                <div class="text">
+                  No es necesario ninguna inscripción ni registro para atender a las charlas. Próximamente avisaremos de la URL en la que podrás seguir el evento, así como el servidor de Discord que permitirá la comunicación con ponentes y resto de participantes.
+                </div>
+              </div>
+
+              <div class="content-box">
                 <span class="title">Talleres</span>
-                <div class="text">¿Quieres asistir a alguno de los talleres? En ese caso, por favor, rellena este
+                <div class="text">
+                  ¿Quieres asistir a alguno de los talleres? En ese caso, por favor, rellena este
                   <a href="https://forms.gle/p8r2bWZHfF8V7pHB9">formulario</a> para que podamos contar contigo! :)
                 </div>
+              </div>
 
               <div class="content-box">
                   <span class="title">Newsletter</span>
-                  <div class="text">Si no quieres perderte ninguna noticia importante de ésta o futuras ediciones de la PyConES, suscríbete a nuestra lista de correo y te mantendremos al día.</div>
-                  <div class="btn-box"><a href="#" data-token="2a609127d3c34a252b160b843131368a" class="theme-btn btn-style-one" onclick="mjOpenPopin(event, this)">Inscribirme<span class="flaticon-arrow"></span></a></div>
+                  <div class="text">
+                    Si no quieres perderte ninguna noticia importante de ésta o futuras ediciones de la PyConES, <a href="#" data-token="2a609127d3c34a252b160b843131368a" onclick="mjOpenPopin(event, this)">suscríbete a nuestra lista de correo</a> y te mantendremos al día.
+                  </div>
               </div>
             </div>
 
