--- a/index.html
+++ b/index.html
@@ -597,15 +597,18 @@
               <div class="content-box">
                 <span class="title">Charlas</span>
                 <div class="text">
-                  No es necesario ninguna inscripción ni registro para atender a las charlas. Próximamente avisaremos de la URL en la que podrás seguir el evento, así como el servidor de Discord que permitirá la comunicación con ponentes y resto de participantes.
+                  <p>No es necesario ninguna inscripción ni registro para atender a las charlas. Podrás seguir el evento en directo a través del <a href="https://youtube.com/c/PythonEspañaOficial/videos?view=2&live_view=502"><i class="fa fa-youtube"></i> canal de YouTube de Python España</a>.</p>
+                  <p>La interacción con los y las ponentes de las charlas y keynotes y el resto de participantes será a través de <a href="https://discord.gg/rmGmAPRW6W"><i class="fab fa-discord"></i> este servidor de Discord</a>.</p>
+
                 </div>
               </div>
 
               <div class="content-box">
                 <span class="title">Talleres</span>
                 <div class="text">
-                  ¿Quieres asistir a alguno de los talleres? En ese caso, por favor, rellena este
-                  <a href="https://forms.gle/p8r2bWZHfF8V7pHB9">formulario</a> para que podamos contar contigo! :)
+                  <p>¿Quieres asistir a alguno de los talleres? En ese caso, por favor, rellena este
+                  <a href="https://forms.gle/p8r2bWZHfF8V7pHB9">formulario</a> para que podamos contar contigo! :)</p>
+                  <p>Todos los talleres tendrán lugar en el <a href="https://discord.gg/rmGmAPRW6W">servidor de Discord</a>.</p>
                 </div>
               </div>
 
