--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@
                         <div class="text">La PyConES es la conferencia más grande de la comunidad Python en España, donde se dan cita profesionales y entusiastas del lenguaje para difundir su experiencia y conocimientos en varias sesiones de charlas y talleres.
                           Este año se realizará de forma <strong>online</strong> durante los días <strong>2 y 3 de octubre de 2021</strong>.
                         </div>
-                        <div class="btn-box">
+                        <div class="btn-box contact">
                             <a href="#contact" class="theme-btn btn-style-one">Contacto <span class="flaticon-arrow"></span></a>
                         </div>
                     </div>
