Add links for videos on Django PyLadies

--- a/gen_programa/base.html
+++ b/gen_programa/base.html
@@ -678,6 +678,15 @@
                         </div>
                         <div class="btn-box">
                             <a class="theme-btn btn-style-three" role="button" href="#tallerpyladies">Lee más</a>
+                            <div class="side-link youtube-link">
+                              <a href="https://www.youtube.com/watch?v=Rat2egkxGm4"><i class="fa fa-youtube"></i> Apertura</a>
+                            </div>
+                            <div class="side-link youtube-link">
+                              <a href="https://youtu.be/zBSfcysdilQ?t=429"><i class="fa fa-youtube"></i> ¿Mujeres en Tecnología? por Clara Martínez Sánchez</a>
+                            </div>
+                            <div class="side-link youtube-link">
+                              <a href="https://youtu.be/zBSfcysdilQ?t=7463"><i class="fa fa-youtube"></i> Yes, we can! por Plata</a>
+                            </div>
                         </div>
                       </div>
                     </div>
