Fix link notion Jordi

--- a/index.html
+++ b/index.html
@@ -1333,7 +1333,7 @@
 
                             
                               <div class="side-link slides-link">
-                                <a href="https://certain-tick-b43.notion.site/Reales-de-verdad-f0c2bd6ffdd045c88fa28a32b14617cb"><i class="fab fa-slideshare"></i> Diapositivas</a>
+                                <a href="https://upc-mat.notion.site/Reales-de-verdad-f0c2bd6ffdd045c88fa28a32b14617cb"><i class="fab fa-slideshare"></i> Diapositivas</a>
                               </div>
                             
 
